--- a/style.css
+++ b/style.css
@@ -15,7 +15,6 @@ main {
 
 svg {
     background: #EFECEA;
-    box-shadow: 0 19px 38px rgba(0, 0, 0, 0.30), 0 15px 12px rgba(0, 0, 0, 0.22);
 }
 
 .bar {
@@ -58,7 +57,9 @@ text {
 .tick text {
     font-weight: 700;
 }
-
+div.tooltip, svg{
+    box-shadow: 0 19px 38px rgba(0, 0, 0, 0.30), 0 15px 12px rgba(0, 0, 0, 0.22);
+}
 div.tooltip{
     position: absolute;			
     text-align: center;	
